--- a/AutoMall/ViewControllers/Upkeep/UpkeepPlanSignCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/UpkeepPlanSignCell.xib
@@ -18,6 +18,16 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="点击签名" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kmP-ar-Acl">
+                        <rect key="frame" x="110" y="34.5" width="100" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="PRN-0s-s0b"/>
+                            <constraint firstAttribute="width" constant="100" id="ZzC-8Y-lkx"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="deN-a5-Ics" customClass="WPImageView">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
                     </imageView>
@@ -25,11 +35,14 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="deN-a5-Ics" secondAttribute="trailing" id="787-Ew-sMK"/>
                     <constraint firstAttribute="bottom" secondItem="deN-a5-Ics" secondAttribute="bottom" id="8iI-zu-4NE"/>
+                    <constraint firstItem="kmP-ar-Acl" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="900-so-g7R"/>
                     <constraint firstItem="deN-a5-Ics" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="f75-l0-IwM"/>
+                    <constraint firstItem="kmP-ar-Acl" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="gBA-p6-B3s"/>
                     <constraint firstItem="deN-a5-Ics" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="oYc-2t-vHB"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="noticeL" destination="kmP-ar-Acl" id="J8f-nD-GEL"/>
                 <outlet property="signImgView" destination="deN-a5-Ics" id="gU0-sU-XaO"/>
             </connections>
             <point key="canvasLocation" x="-84" y="44"/>
